Bug #47941 configure --with-ndb-port-base=port broken and should be removed
Submitted: 9 Oct 11:49 Modified: 15 Oct 14:32
Reporter: Magnus Blaudd
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:mysql-5.1-telco-7.0 OS:Any
Assigned to: Magnus Blaudd Target Version:
Tags: 7.0.9
Triage: Triaged: D4 (Minor) / R6 (Needs Assessment) / E6 (Needs Assessment)

[9 Oct 11:49] Magnus Blaudd
Description:
The value for NDB_TCP_BASE_PORT defined in ndb_global.h(.in) is set to "@ndb_port_base@".
The intention is that it should be set by configure to the value of
--with-ndb-port-base=port(or to the builtin default)

Since the need to specify which baseport number to be used for connections inside the
cluster has been removed by implementing dynamic server ports, the ability to specify
which base port to use should be removed.

How to repeat:
MCI

Suggested fix:
Remove the --with-ndb-base-port from configure and all remnants of it in the code.
[9 Oct 15:51] Magnus Blaudd
Fixed configure, it now looks like:

Using NDB Cluster
could not find sci transporter in /{include, lib}
configure: WARNING: Ignoring deprecated option --with-ndb-port-base
checking for NDB Cluster options...
[9 Oct 16:13] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/86380
[9 Oct 16:20] Bugs System
Pushed into 5.1.39-ndb-7.0.9 (revid:magnus.blaudd@sun.com-20091009141821-rrrm9xm2j8f3hstt)
(version source revid:magnus.blaudd@sun.com-20091009141821-rrrm9xm2j8f3hstt) (merge vers:
5.1.39-ndb-7.0.9) (pib:13)
[9 Oct 16:27] Bugs System
Pushed into 5.1.39-ndb-7.1.0 (revid:magnus.blaudd@sun.com-20091009142206-4g25a32akb8t3o5u)
(version source revid:magnus.blaudd@sun.com-20091009142206-4g25a32akb8t3o5u) (merge vers:
5.1.39-ndb-7.1.0) (pib:13)
[10 Oct 20:09] Jon Stephens
Documented bugfix in the NDB-7.0.9 changelog as follows:

      The --with-ndb-port-base option for configure did not function 
      correctly and has been removed.

Closed.
[10 Oct 21:59] Jon Stephens
This option still appears in the output of configure --help. 7.0 and 7.1 trees.
[15 Oct 12:39] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/86930

3077 Magnus Blaudd	2009-10-15
      Bug#47941 configure --with-ndb-port-base=port broken and should be removed
       - Remove the deprecation warning from configure in 7.1
[15 Oct 13:10] Magnus Blaudd
Added deprecation warning in current versions and removed option in 7.1
[15 Oct 14:32] Jon Stephens
Updated changelog entry per IRC discussion with Magnus.

Closed.