Bug #47941  	configure --with-ndb-port-base=port broken and should be removed  - Print warning if --with-ndb-port-base is used, it has not effect  - Since ndb_global.h.in does not have any "substs" anymore, move it to ndb_global.h  - Remove the last remnants of NDB_TCP_PORT_BASE usage from ConfigInfo.cpp, dead code.