storage/ndb/src/mgmsrv/ConfigInfo.cpp
@@ -4087,15 +4087,6 @@ fixPortNumber(InitConfigFileParser::Context & ctx, const char * data){
 	ctx.m_userProperties.get(server_port_adder.c_str(), &adder);
 	ctx.m_userProperties.put(server_port_adder.c_str(), adder+1, true);
       }
-      
-      if (!ctx.m_userProperties.get("ServerPortBase", &base)){
-	if(!(ctx.m_userDefaults &&
-	   ctx.m_userDefaults->get("PortNumber", &base)) &&
-	   !ctx.m_systemDefaults->get("PortNumber", &base)) {
-	  base= (Uint32)strtoll(NDB_TCP_BASE_PORT,0,0);
-	}
-	ctx.m_userProperties.put("ServerPortBase", base);
-      }
 
       port= base + adder;
       ctx.m_userProperties.put("ServerPort_", id1, port);
